@@ -49,6 +49,7 @@ netdiscovery/netinventory:
 * Get rid of unofficial Net::Ping::TimeStamp support to only use official
   support if available. You'll need at least Net::Ping v2.67 to discover
   devices thanks to timestamp ping.
+* Fix #481: Add Synology NAS support
 
 collect:
 * Thanks to David Durieux, add support for dynamic pattern in registry key
